# patina-plugin

./: .gitignore  CMakeLists.txt  README.md  deploy.ps1
.github/workflows/: release.yml
installer/: README.md
installer/macos/: build-pkg.sh  conclusion.html  distribution.xml  license.html  welcome.html
installer/windows/: patina-installer.iss
src/: PatinaLookAndFeel.cpp  PatinaLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  RandomizeSystem.cpp  RandomizeSystem.h
src/dsp/: DistortModule.cpp  DistortModule.h  FilterModule.cpp  FilterModule.h  FluxModule.cpp  FluxModule.h  NoiseModule.cpp  NoiseModule.h  ResonatorModule.cpp  ResonatorModule.h  SpaceModule.cpp  SpaceModule.h  WobbleModule.cpp  WobbleModule.h
src/visualizer/: SpectralBloomComponent.cpp  SpectralBloomComponent.h
